--- a/style.css
+++ b/style.css
@@ -19,9 +19,7 @@ textarea{
   background-repeat: no-repeat;
  background-size: cover;
   background-position: center;
-  /* background-color: transparent; */ 
   color: black;
-  border-radius: 0;
   border-bottom: 10px solid black;
 }
 
@@ -90,6 +88,18 @@ textarea{
     font-size: 24px;
     background-color: rgb(173, 173, 173); 
 }
-
-
-/* add media query pad/resize save buttons */
+@include media-breakpoint-up(sm) {
+    .col-sm-1 {
+        font-size: 20px;
+        padding: 18px 0px 0px 0px;
+    }
+    .col-sm-8 {
+        font-size: 18px;
+    }
+    .display-3 {
+        font-size: 22px;
+    }
+    .lead {
+        font-size: 18px;
+    }
+}
